added writing to leaderboard as README

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "726aefb7",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ecb173d6",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
        " 'Brendon': 1193}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f278b446",
    "metadata": {},
    "outputs": [
@@ -60,6 +60,16 @@
    ],
    "source": [
     "print_leaderboard()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "953a6ff9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_leaderboard()"
    ]
   }
  ],
