--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "726aefb7",
    "metadata": {},
    "outputs": [],
@@ -16,26 +16,9 @@
    "execution_count": 3,
    "id": "ecb173d6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Anu': 1368,\n",
-       " 'Milo': 1062,\n",
-       " 'Theo': 1200,\n",
-       " 'Nyk': 1081,\n",
-       " 'Franky': 1213,\n",
-       " 'Hayden': 1275,\n",
-       " 'Brendon': 1193}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "show_elo()"
+    "add_match(date=\"7_21\", winner=\"Theo\", loser=\"Milo\")"
    ]
   },
   {
@@ -50,11 +33,11 @@
      "text": [
       "1 - Anu: 1368\n",
       "2 - Hayden: 1275\n",
-      "3 - Franky: 1213\n",
-      "4 - Theo: 1200\n",
-      "5 - Brendon: 1193\n",
-      "6 - Nyk: 1081\n",
-      "7 - Milo: 1062\n"
+      "3 - Theo: 1231\n",
+      "4 - Brendon: 1193\n",
+      "5 - Nyk: 1149\n",
+      "6 - Franky: 1144\n",
+      "7 - Milo: 1030\n"
      ]
     }
    ],
@@ -64,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "953a6ff9",
    "metadata": {},
    "outputs": [],
