--- a/main.ipynb
+++ b/main.ipynb
@@ -13,17 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ecb173d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_match(date=\"7_21\", winner=\"Theo\", loser=\"Milo\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f278b446",
    "metadata": {},
    "outputs": [
@@ -32,12 +22,13 @@
      "output_type": "stream",
      "text": [
       "1 - Anu: 1368\n",
-      "2 - Hayden: 1275\n",
+      "2 - Hayden: 1314\n",
       "3 - Theo: 1231\n",
       "4 - Brendon: 1193\n",
-      "5 - Nyk: 1149\n",
-      "6 - Franky: 1144\n",
-      "7 - Milo: 1030\n"
+      "5 - Aayushka: 1160\n",
+      "6 - Nyk: 1149\n",
+      "7 - Franky: 1144\n",
+      "8 - Milo: 1030\n"
      ]
     }
    ],
@@ -47,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "953a6ff9",
    "metadata": {},
    "outputs": [],
