--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "726aefb7",
    "metadata": {},
    "outputs": [],
@@ -13,37 +13,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "f278b446",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 - Anu: 1368\n",
-      "2 - Hayden: 1314\n",
-      "3 - Theo: 1231\n",
-      "4 - Brendon: 1193\n",
-      "5 - Aayushka: 1160\n",
-      "6 - Nyk: 1149\n",
-      "7 - Franky: 1144\n",
-      "8 - Milo: 1030\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print_leaderboard()"
+    "add_match(date='7_21',winner='Theo',loser='Nyk')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "953a6ff9",
    "metadata": {},
    "outputs": [],
    "source": [
     "write_leaderboard()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f719931a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Anu': 1368,\n",
+       " 'Milo': 1030,\n",
+       " 'Theo': 1269,\n",
+       " 'Nyk': 1110,\n",
+       " 'Franky': 1144,\n",
+       " 'Hayden': 1314,\n",
+       " 'Brendon': 1193,\n",
+       " 'Aayushka': 1160}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_elo()"
    ]
   }
  ],
