--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "726aefb7",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_match(date='7_21',winner='Theo',loser='Nyk')"
+    "add_match(date='7_21',winner='Hayden',loser='Aayushka')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "953a6ff9",
    "metadata": {},
    "outputs": [],
@@ -33,24 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f719931a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Anu': 1368,\n",
+       "{'Anu': 1304,\n",
        " 'Milo': 1030,\n",
-       " 'Theo': 1269,\n",
-       " 'Nyk': 1110,\n",
+       " 'Theo': 1379,\n",
+       " 'Nyk': 1071,\n",
        " 'Franky': 1144,\n",
-       " 'Hayden': 1314,\n",
-       " 'Brendon': 1193,\n",
+       " 'Hayden': 1266,\n",
+       " 'Brendon': 1231,\n",
        " 'Aayushka': 1160}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
