--- a/main.ipynb
+++ b/main.ipynb
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f278b446",
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_match(date='7_21',winner='Hayden',loser='Aayushka')"
+    "add_match(date='7_23',winner='Nyk',loser='Anu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "953a6ff9",
    "metadata": {},
    "outputs": [],
@@ -33,24 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f719931a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Anu': 1304,\n",
+       "{'Anu': 1241,\n",
        " 'Milo': 1030,\n",
        " 'Theo': 1379,\n",
-       " 'Nyk': 1071,\n",
-       " 'Franky': 1144,\n",
-       " 'Hayden': 1266,\n",
+       " 'Nyk': 1132,\n",
+       " 'Franky': 1110,\n",
+       " 'Hayden': 1299,\n",
        " 'Brendon': 1231,\n",
        " 'Aayushka': 1160}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
