--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "726aefb7",
    "metadata": {},
    "outputs": [],
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f278b446",
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_match(date='7_23',winner='Nyk',loser='Anu')"
+    "add_match(date='7_24',winner='Hayden',loser='Nyk')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "953a6ff9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "f719931a",
    "metadata": {},
    "outputs": [
@@ -41,22 +41,43 @@
      "data": {
       "text/plain": [
        "{'Anu': 1241,\n",
-       " 'Milo': 1030,\n",
-       " 'Theo': 1379,\n",
-       " 'Nyk': 1132,\n",
-       " 'Franky': 1110,\n",
-       " 'Hayden': 1299,\n",
-       " 'Brendon': 1231,\n",
+       " 'Milo': 993,\n",
+       " 'Theo': 1408,\n",
+       " 'Nyk': 1104,\n",
+       " 'Franky': 1144,\n",
+       " 'Hayden': 1326,\n",
+       " 'Brendon': 1201,\n",
        " 'Aayushka': 1160}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "show_elo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c336eb2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1084, 1316)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_elo(993, 1408, k=100)"
    ]
   }
  ],
