--- a/main.ipynb
+++ b/main.ipynb
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "f278b446",
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_match(date='7_24',winner='Hayden',loser='Nyk')"
+    "add_match(date='7_24',winner='Anu',loser='Brendon')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "953a6ff9",
    "metadata": {},
    "outputs": [],
@@ -33,24 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "f719931a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Anu': 1241,\n",
+       "{'Anu': 1317,\n",
        " 'Milo': 993,\n",
        " 'Theo': 1408,\n",
        " 'Nyk': 1104,\n",
        " 'Franky': 1144,\n",
        " 'Hayden': 1326,\n",
-       " 'Brendon': 1201,\n",
+       " 'Brendon': 1123,\n",
        " 'Aayushka': 1160}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
